--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 # https://github.com/travis-ci/travis-ci/issues/4756
 env:
   - TOX_ENV=flake8
-  - TOX_ENV=py27-twtrunk-abtrunk
+#  - TOX_ENV=py27-twtrunk-abtrunk
 #  - TOX_ENV=pypy-twtrunk-abtrunk
   - TOX_ENV=py33-twtrunk-abtrunk
   - TOX_ENV=py34-twtrunk-abtrunk
