--- a/crossbar/templates/hello/python/.crossbar/config.json
+++ b/crossbar/templates/hello/python/.crossbar/config.json
@@ -1,16 +1,10 @@
-
 {
-   "controller": {
-   },
    "workers": [
       {
          "type": "router",
-         "options": {
-            "pythonpath": [".."]
-         },
          "realms": [
             {
-               "name": "{{ realm }}",
+               "name": "realm1",
                "roles": [
                   {
                      "name": "anonymous",
@@ -37,7 +31,7 @@
                "paths": {
                   "/": {
                      "type": "static",
-                     "directory": "../{{ appname }}/web"
+                     "directory": "../web"
                   },
                   "ws": {
                      "type": "websocket"
@@ -54,8 +48,8 @@
          "components": [
             {
                "type": "class",
-               "classname": "{{ appname }}.{{ appname }}.AppSession",
-               "realm": "{{ realm }}",
+               "classname": "hello.AppSession",
+               "realm": "realm1",
                "transport": {
                   "type": "websocket",
                   "endpoint": {
