--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,7 @@ deps =
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
-   {py27,py33,py34}: pip install -q .[all]
-   {pypy}: pip install -q .[msgpack,tls,system]
+   {py27,py33,py34,pypy}: pip install -q .[db,dev,tls,manhole,msgpack,system,accelerate,postgres]
    sh -c "which python"
    sh -c "which coverage"
    python -V
