--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
-   {py27,py33,py34,pypy}: pip install -q .[db,dev,tls,manhole,msgpack,system,accelerate,postgres]
+   {py27,py33,py34,pypy}: pip install -q .[all]
    sh -c "which python"
    sh -c "which coverage"
    python -V
