enable more build envs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, {py27,pypy,py33,py34}-{twtrunk,twcurrent}-{abtrunk,abcurrent}
+envlist = flake8, {py27,pypy,py33,py34,py35}-{twtrunk,twcurrent}-{abtrunk,abcurrent}
 
 [flake8]
 exclude = crossbar/worker/test/examples/syntaxerror.py
@@ -23,7 +23,7 @@ deps =
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
-   {py27,py33,py34,pypy}: pip install -q .[all]
+   {py27,py33,py34,py35,pypy}: pip install -q .[all]
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -36,4 +36,4 @@ commands =
    coverage html
 setenv =
    COVERAGE_PROCESS_START = .coveragerc
-   {py27,py33,py34}: CB_FULLTESTS = 1
+   {py27,py33,py34,py35}: CB_FULLTESTS = 1
