--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,21 @@ install:
 # https://github.com/travis-ci/travis-ci/issues/4756
 env:
   - TOX_ENV=flake8
+
   - TOX_ENV=py27-twtrunk-abtrunk
-#  - TOX_ENV=pypy-twtrunk-abtrunk
+  - TOX_ENV=py27-twcurrent-abcurrent
+
   - TOX_ENV=py33-twtrunk-abtrunk
-  - TOX_ENV=py34-twtrunk-abtrunk
-#  - TOX_ENV=py27-twcurrent-abcurrent
-#  - TOX_ENV=pypy-twcurrent-abcurrent
   - TOX_ENV=py33-twcurrent-abcurrent
+
+  - TOX_ENV=py34-twtrunk-abtrunk
   - TOX_ENV=py34-twcurrent-abcurrent
+
+#  - TOX_ENV=py35-twtrunk-abtrunk
+#  - TOX_ENV=py35-twcurrent-abcurrent
+
+  - TOX_ENV=pypy-twtrunk-abtrunk
+  - TOX_ENV=pypy-twcurrent-abcurrent
 
 script:
   - tox -c tox.ini -e $TOX_ENV
@@ -33,3 +40,13 @@ notifications:
 
 matrix:
   fast_finish: true
+
+  # https://github.com/travis-ci/travis-ci/issues/4794#issuecomment-143758799
+  include:
+    - python: 3.5
+      env:
+      - TOX_ENV=py35-twtrunk-abtrunk
+
+    - python: 3.5
+      env:
+      - TOX_ENV=py35-twcurrent-abcurrent
