try and make all green

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ basepython = python2.7
 [testenv]
 whitelist_externals = sh
 deps =
+   pypy: cryptography<1.0
    mock
    coverage
    abcurrent: autobahn
