--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,20 @@ env:
   - TOX_ENV=flake8
 
   - TOX_ENV=py27-twtrunk-abtrunk
-  - TOX_ENV=py27-twcurrent-abcurrent
+  - TOX_ENV=py27-twcurrent-abtrunk
+  #- TOX_ENV=py27-twcurrent-abcurrent
 
   - TOX_ENV=py33-twtrunk-abtrunk
-  - TOX_ENV=py33-twcurrent-abcurrent
+  - TOX_ENV=py33-twcurrent-abtrunk
+  #- TOX_ENV=py33-twcurrent-abcurrent
 
   - TOX_ENV=py34-twtrunk-abtrunk
-  - TOX_ENV=py34-twcurrent-abcurrent
+  - TOX_ENV=py34-twcurrent-abtrunk
+  #- TOX_ENV=py34-twcurrent-abcurrent
 
   - TOX_ENV=pypy-twtrunk-abtrunk
-  - TOX_ENV=pypy-twcurrent-abcurrent
+  - TOX_ENV=pypy-twcurrent-abtrunk
+  #- TOX_ENV=pypy-twcurrent-abcurrent
 
 script:
   - tox -c tox.ini -e $TOX_ENV
@@ -43,4 +47,8 @@ matrix:
 
     - python: 3.5
       env:
-      - TOX_ENV=py35-twcurrent-abcurrent
+      - TOX_ENV=py35-twcurrent-abtrunk
+
+#    - python: 3.5
+#      env:
+#      - TOX_ENV=py35-twcurrent-abcurrent
