Migrated conditional dependencies to PEP 508 format

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include COPYRIGHT
 include LICENSE
+include ez_setup.py
 recursive-include crossbar/web *
 recursive-include crossbar/templates *
 recursive-include crossbar/adapter/postgres/ddl *
