port over to use txaio logger

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps =
    mock
    coverage
    abcurrent: autobahn
+   abtrunk: https://github.com/crossbario/txaio/archive/master.zip
    abtrunk: https://github.com/tavendo/AutobahnPython/archive/master.zip
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
