--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,8 @@ commands =
    sh -c "which python"
    sh -c "which coverage"
    python -V
+   pip --version
+   python -c "import setuptools; print('setuptools-{}'.format(setuptools.__version__))"
    coverage --version
    {envbindir}/trial --version
    coverage erase
