ok, maybe this: tox doesn't like {} formatting - use old school string interpolation

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
    sh -c "which coverage"
    python -V
    pip --version
-   python -c "import setuptools; print(\"setuptools-{}\".format(setuptools.__version__))"
+   python -c "import setuptools; print('setuptools-%s' % setuptools.__version__)"
    coverage --version
    {envbindir}/trial --version
    coverage erase
