--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,6 @@ deps =
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
-   {py27,py33,py34,py35,pypy}: pip install -q .[all]
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -34,6 +33,7 @@ commands =
    python -c "import setuptools; print('setuptools-%s' % setuptools.__version__)"
    coverage --version
    {envbindir}/trial --version
+   {py27,py33,py34,py35,pypy}: pip install .
    coverage erase
    coverage run {envbindir}/trial {posargs:crossbar}
    coverage combine
@@ -41,4 +41,6 @@ commands =
    coverage html
 setenv =
    COVERAGE_PROCESS_START = .coveragerc
+   LMDB_FORCE_CFFI=1
+   SODIUM_INSTALL=bundled
    {py27,py33,py34,py35}: CB_FULLTESTS = 1
