--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,8 @@ commands =
    python -c "import setuptools; print('setuptools-%s' % setuptools.__version__)"
    coverage --version
    {envbindir}/trial --version
-   {py27,py33,py34,py35,pypy}: pip install .
+   #{py27,py33,py34,py35,pypy}: pip install .
+   {py27,py33,py34,py35,pypy}: LMDB_FORCE_CFFI=1 SODIUM_INSTALL=bundled pip install --ignore-installed --require-hashes -r requirements.txt
    coverage erase
    coverage run {envbindir}/trial {posargs:crossbar}
    coverage combine
@@ -41,6 +42,6 @@ commands =
    coverage html
 setenv =
    COVERAGE_PROCESS_START = .coveragerc
-   LMDB_FORCE_CFFI=1
-   SODIUM_INSTALL=bundled
+   #LMDB_FORCE_CFFI=1
+   #SODIUM_INSTALL=bundled
    {py27,py33,py34,py35}: CB_FULLTESTS = 1
