--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
    coverage --version
    {envbindir}/trial --version
    #{py27,py33,py34,py35,pypy}: pip install .
-   {py27,py33,py34,py35,pypy}: LMDB_FORCE_CFFI=1 SODIUM_INSTALL=bundled pip install --ignore-installed --require-hashes -r requirements.txt
+   {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r requirements.txt
    coverage erase
    coverage run {envbindir}/trial {posargs:crossbar}
    coverage combine
