--- a/towncrier.ini
+++ b/towncrier.ini
@@ -1,5 +1,5 @@
 [towncrier]
 package = crossbar
 template = docs/templates/towncrier_changelog.md
-start_string = [//]: # "towncrier start"
+start_line = [//]: # "towncrier start"
 title_format = # {name} {version}
