produce NEWS.md instead of .rst

--- a/towncrier.ini
+++ b/towncrier.ini
@@ -3,3 +3,4 @@ package = crossbar
 template = docs/templates/towncrier_changelog.md
 start_line = [//]: # "towncrier start"
 title_format = # {name} {version}
+filename = NEWS.md
