--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -1,9 +1,8 @@
 click>=5.1
 setuptools>=18.3.1
 zope.interface>=4.1.2
-# we pin Twisted because of: https://github.com/crossbario/autobahn-python/issues/644
-Twisted>=16.0.0,<=16.1.1
-autobahn>=0.14.0
+Twisted>=16.2.0
+autobahn>=0.14.1
 netaddr>=0.7.18
 PyTrie>=0.2
 Jinja2>=2.8
@@ -24,5 +23,5 @@ pyasn1-modules>=0.0.7
 service_identity>=14.0.0
 PyNaCl>=1.0.1
 treq>=15.1.0
-setproctitle>=1.1.9
+setproctitle>=1.1.10
 watchdog>=0.8.3
