--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ skip_install = True
 deps =
    flake8
 commands =
-   flake8 --ignore=E501,N801,N802,N803,N805,N806 crossbar
+   flake8 --ignore=F405,E501,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
 
 
