--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
    {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r requirements.txt
    coverage erase
    coverage run {envbindir}/trial {posargs:crossbar}
-   coverage combine
+   coverage combine --append
    coverage report
    coverage html
 setenv =
