--- a/tox.ini
+++ b/tox.ini
@@ -16,14 +16,14 @@ basepython = python2.7
 [testenv]
 whitelist_externals = sh
 deps =
-   pypy: cryptography<1.0
-   pypy: pynacl<1.0
+   #pypy: cryptography<1.0
+   #pypy: pynacl<1.0
    mock
    coverage
    abcurrent: autobahn
    abtrunk: https://github.com/crossbario/txaio/archive/master.zip
-   abtrunk: https://github.com/tavendo/AutobahnPython/archive/master.zip
-   twcurrent: Twisted
+   abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+   twcurrent: twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
    sh -c "which python"
