patch up the coverage rc

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,15 @@
 [run]
-source = crossbar
-include =
-     crossbar/*
 omit =
      crossbar/worker/test/examples/syntaxerror.py
 branch = True
+source = crossbar
+
+[paths]
+source=
+   crossbar
+   .tox/*/lib/python*/site-packages/crossbar
+   .tox/*/Lib/site-packages/crossbar
+   .tox/pypy*/site-packages/crossbar
 
 [report]
 precision = 2
