--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands =
    #{py27,py33,py34,py35,pypy}: pip install .
    {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r requirements.txt
    coverage erase
-   coverage run {envbindir}/trial {posargs:crossbar}
+   coverage run -m twisted.trial {posargs:crossbar}
    coverage combine --append
    coverage report
    coverage html
