--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,12 @@ install:
 env:
   - TOX_ENV=flake8
 
-  - TOX_ENV=py27-twtrunk-abtrunk
-  - TOX_ENV=py27-twcurrent-abtrunk
+  - TOX_ENV=py27-twtrunk-abtrunk,coverage-report
+  - TOX_ENV=py27-twcurrent-abtrunk,coverage-report
   #- TOX_ENV=py27-twcurrent-abcurrent
 
-  - TOX_ENV=py33-twtrunk-abtrunk
-  - TOX_ENV=py33-twcurrent-abtrunk
-  #- TOX_ENV=py33-twcurrent-abcurrent
-
-  - TOX_ENV=py34-twtrunk-abtrunk
-  - TOX_ENV=py34-twcurrent-abtrunk
+  - TOX_ENV=py34-twtrunk-abtrunk,coverage-report
+  - TOX_ENV=py34-twcurrent-abtrunk,coverage-report
   #- TOX_ENV=py34-twcurrent-abcurrent
 
   # Travis needs to update it's PyPy
@@ -45,11 +41,11 @@ matrix:
   include:
     - python: 3.5
       env:
-      - TOX_ENV=py35-twtrunk-abtrunk
+      - TOX_ENV=py35-twtrunk-abtrunk,coverage-report
 
     - python: 3.5
       env:
-      - TOX_ENV=py35-twcurrent-abtrunk
+      - TOX_ENV=py35-twcurrent-abtrunk,coverage-report
 
 #    - python: 3.5
 #      env:
