--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -18,7 +18,7 @@ parts:
   crossbar:
     plugin: python
     source: https://github.com/crossbario/crossbar.git
-    requirements: requirements.txt
+    requirements: requirements-in.txt
     build-packages:
       - gcc
       - libffi-dev
