--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -18,6 +18,7 @@ parts:
   crossbar:
     plugin: python
     source: https://github.com/crossbario/crossbar.git
+    python-packages: cffi>=1.1.0
     requirements: requirements-in.txt
     build-packages:
       - gcc
