--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ commands =
    coverage --version
    {envbindir}/trial --version
    #{py27,py33,py34,py35,pypy}: pip install .
-   {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r requirements.txt
+   {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
    coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {posargs:crossbar}
 setenv =
    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
