--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -1,23 +1,23 @@
 click>=6.6
-setuptools>=18.3.1
-zope.interface>=4.2.0
-Twisted>=16.3.0
+setuptools>=28.3.0
+zope.interface>=4.2.3
+Twisted>=16.5.0rc1
 autobahn>=0.16.0
 netaddr>=0.7.18
 PyTrie>=0.2
 Jinja2>=2.8
 mistune>=0.7.3
 Pygments>=2.1.3
-PyYAML>=3.11
+PyYAML>=3.12
 shutilwhich>=1.1.0
 sdnotify>=0.3.1
-psutil>=4.3.0
+psutil>=4.3.1
 lmdb>=0.89
-u-msgpack-python>=2.1
+u-msgpack-python>=2.2
 cbor>=1.0.0
 py-ubjson>=0.8.5
-cryptography>=1.4
-pyOpenSSL>=16.0.0
+cryptography>=1.5.2
+pyOpenSSL>=16.1.0
 pyasn1>=0.1.9
 pyasn1-modules>=0.0.8
 service_identity>=16.0.0
@@ -27,4 +27,4 @@ setproctitle>=1.1.10
 pyqrcode>=1.2.1
 watchdog>=0.8.3
 bitstring>=3.1.5
-attrs>=16.0.0
+attrs>=16.2.0
