--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, {py27,pypy,py33,py34,py35}-{twtrunk,twcurrent}-{abtrunk,abcurrent}
+envlist = flake8, {py27,pypy,py33,py34,py35}-{pinned,unpinned}
 
 [flake8]
 exclude = crossbar/worker/test/examples/syntaxerror.py
@@ -39,11 +39,6 @@ deps =
    #pypy: pynacl<1.0
    mock
    coverage
-   abcurrent: autobahn
-   abtrunk: https://github.com/crossbario/txaio/archive/master.zip
-   abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
-   twcurrent: twisted
-   twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
    sh -c "which python"
    sh -c "which coverage"
@@ -52,8 +47,7 @@ commands =
    python -c "import setuptools; print('setuptools-%s' % setuptools.__version__)"
    coverage --version
    {envbindir}/trial --version
-   #{py27,py33,py34,py35,pypy}: pip install .
-   {py27,py33,py34,py35,pypy}: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
+   pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
    coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {posargs:crossbar}
 setenv =
    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
