--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include COPYRIGHT
 include LICENSE
 include LICENSE-FOR-API
 include requirements.txt
-include requirements-in.txt
+include requirements-min.txt
 include requirements-dev.txt
 recursive-include crossbar/web *
 recursive-include crossbar/templates *
