--- a/requirements.txt
+++ b/requirements.txt
@@ -226,6 +226,10 @@ service_identity==16.0.0 \
 setproctitle==1.1.10 \
     --hash=sha256:6283b7a58477dd8478fbb9e76defb37968ee4ba47b05ec1c053cb39638bd7398 \
     --hash=sha256:6a035eddac62898786aed2c2eee7334c28cfc8106e8eb29fdd117cac56c6cdf0
+setuptools==28.7.1 \
+    --hash=sha256:5bd5d77813a5b8e30ad84161b3b3262e2b6a6cddc22568d88c5b7fedb404b762 \
+    --hash=sha256:6aae26f13411c3102fc915db6e44b62a97f76a7ba7e963daabf78c57240ac166 \
+    --hash=sha256:92ac0bcad9a513c940f6b70169d159d30eabc6be25b979f0a6f6401c9585443c
 shutilwhich==1.1.0 \
     --hash=sha256:db1f39c6461e42f630fa617bb8c79090f7711c9ca493e615e43d0610ecb64dc6
 six==1.10.0 \
