--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ exclude = crossbar/worker/test/examples/syntaxerror.py
 
 [testenv:flake8]
 skip_install = True
+changedir={toxinidir}
 deps =
-   flake8
+   flake8==3.2.0,<3.2.1
 commands =
    flake8 --ignore=E402,F405,E501,E731,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
