--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, {py27,pypy,py33,py34,py35}-{pinned,unpinned}
+envlist = flake8, {py27,pypy,py33,py34,py35}-{pinned,unpinned,abtrunk}
 
 [flake8]
 exclude = crossbar/worker/test/examples/syntaxerror.py
@@ -38,6 +38,7 @@ changedir=tests
 deps =
    mock
    coverage
+   abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
 commands =
    sh -c "which python"
    sh -c "which coverage"
