--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,4 @@ include requirements-dev.txt
 recursive-include crossbar/web *
 recursive-include crossbar/templates *
 recursive-include crossbar/keys *
+recursive-include crossbar/adapter/mqtt/test/certs *
