--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ deps =
    coverage
    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
 commands =
+   sh -c "env"
    sh -c "which python"
    sh -c "which coverage"
    python -V
