--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include LICENSE-FOR-API
 include requirements.txt
 include requirements-min.txt
+include requirements-pinned.txt
 include requirements-dev.txt
 recursive-include crossbar/web *
 recursive-include crossbar/templates *
