--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -2,7 +2,7 @@ appdirs==1.4.3
 argh==0.26.2
 asn1crypto==0.22.0
 attrs==16.3.0
-autobahn==0.18.2
+autobahn==17.5.1
 Automat==0.5.0
 bitstring==3.1.5
 cbor==1.0.0
@@ -11,6 +11,9 @@ click==6.7
 constantly==15.1.0
 cryptography==1.8.1
 enum34==1.1.6
+h2==2.6.2
+hpack==3.0.0
+hyperframe==5.1.0
 idna==2.5
 incremental==16.10.1
 ipaddress==1.0.18
@@ -21,6 +24,7 @@ mistune==0.7.4
 netaddr==0.7.19
 packaging==16.8
 pathtools==0.1.2
+priority==1.3.0
 psutil==5.2.2
 py-ubjson==0.9.0
 pyasn1==0.2.3
@@ -28,7 +32,7 @@ pyasn1-modules==0.0.8
 pycparser==2.17
 Pygments==2.2.0
 PyNaCl==1.1.2
-pyOpenSSL==16.2.0
+pyOpenSSL==17.0.0
 pyparsing==2.2.0
 PyQRCode==1.2.1
 PyTrie==0.3
@@ -37,13 +41,13 @@ requests==2.13.0
 sdnotify==0.3.1
 service-identity==16.0.0
 setproctitle==1.1.10
-setuptools==35.0.0
+setuptools==35.0.2
 shutilwhich==1.1.0
 six==1.10.0
 sortedcontainers==1.5.7
 treq==17.3.1
 Twisted==17.1.0
-txaio==2.7.0
-u-msgpack-python==2.3.0
+txaio==2.7.1
+u-msgpack-python==2.4.1
 watchdog==0.8.3
-zope.interface==4.3.3
+zope.interface==4.4.0
