--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,19 +1,21 @@
-appdirs==1.4.3
 argh==0.26.2
 asn1crypto==0.22.0
 attrs==17.2.0
-autobahn==17.5.1
+autobahn==17.6.1
 Automat==0.6.0
 bitstring==3.1.5
 cbor==1.0.0
+certifi==2017.4.17
 cffi==1.10.0
+chardet==3.0.4
 click==6.7
 constantly==15.1.0
-cryptography==1.8.2
+cryptography==1.9
 enum34==1.1.6
 h2==2.6.2
 hpack==3.0.0
 hyperframe==5.1.0
+hyperlink==17.1.1
 idna==2.5
 incremental==17.5.0
 ipaddress==1.0.18
@@ -22,32 +24,31 @@ lmdb==0.92
 MarkupSafe==1.0
 mistune==0.7.4
 netaddr==0.7.19
-packaging==16.8
 pathtools==0.1.2
 priority==1.3.0
 psutil==5.2.2
 py-ubjson==0.9.0
 pyasn1==0.2.3
-pyasn1-modules==0.0.8
+pyasn1-modules==0.0.9
 pycparser==2.17
 Pygments==2.2.0
 PyNaCl==1.1.2
 pyOpenSSL==17.0.0
-pyparsing==2.2.0
 PyQRCode==1.2.1
 PyTrie==0.3
 PyYAML==3.12
-requests==2.14.2
+requests==2.17.3
 sdnotify==0.3.1
 service-identity==17.0.0
 setproctitle==1.1.10
-setuptools==35.0.2
+setuptools==36.0.1
 shutilwhich==1.1.0
 six==1.10.0
 sortedcontainers==1.5.7
 treq==17.3.1
-Twisted==17.1.0
-txaio==2.7.1
+Twisted==17.5.0
+txaio==2.8.0
 u-msgpack-python==2.4.1
+urllib3==1.21.1
 watchdog==0.8.3
 zope.interface==4.4.1
