--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, {py27,pypy,py33,py34,py35}-{pinned,unpinned,abtrunk}
+envlist = flake8, {py27,pypy,py36}-{pinned,unpinned,abtrunk}
 
 [flake8]
 exclude = crossbar/worker/test/examples/syntaxerror.py
