--- a/tox.ini
+++ b/tox.ini
@@ -55,4 +55,4 @@ commands =
 setenv =
    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
    COVERAGE_FILE = {toxinidir}/.coverage
-   {py27,py33,py34,py35}: CB_FULLTESTS = 1
+   {py27,py36}: CB_FULLTESTS = 1
