--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ changedir={toxinidir}
 deps =
    flake8==3.2.0,<3.2.1
 commands =
-   flake8 --ignore=E402,F405,E501,E731,N801,N802,N803,N805,N806 crossbar
+   flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
 
 [testenv:coverage-erase]
