--- a/tox.ini
+++ b/tox.ini
@@ -27,9 +27,9 @@ changedir={toxinidir}
 deps =
    coverage
 commands=
-   coverage combine --rcfile={toxinidir}/.coveragerc
-   coverage report --rcfile={toxinidir}/.coveragerc
-   coverage html --rcfile={toxinidir}/.coveragerc
+   coverage combine --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
+   coverage report --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
+   coverage html --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
 
 
 [testenv]
