--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ changedir={toxinidir}
 deps =
    coverage
 commands=
-   coverage combine --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
+   coverage combine --rcfile={toxinidir}/.coveragerc
    coverage report --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
    coverage html --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
 
