--- a/tox.ini
+++ b/tox.ini
@@ -28,8 +28,8 @@ deps =
    coverage
 commands=
    coverage combine --rcfile={toxinidir}/.coveragerc
-   coverage report --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
-   coverage html --rcfile={toxinidir}/.coveragerc --omit=syntaxerror.py
+   coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
+   coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
 
 
 [testenv]
