--- a/tox.ini
+++ b/tox.ini
@@ -27,9 +27,9 @@ changedir={toxinidir}
 deps =
    coverage
 commands=
-   coverage combine
-   coverage report
-   coverage html
+   coverage combine --rcfile={toxinidir}/.coveragerc
+   coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
+   coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
 
 
 [testenv]
