--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,8 @@ deps =
    mock
    coverage
    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+   passlib
+   argon2_cffi
 commands =
    sh -c "env"
    sh -c "which python"
