--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -10,7 +10,7 @@ cffi==1.11.5
 chardet==3.0.4
 click==6.7
 constantly==15.1.0
-cryptography==2.1.4
+cryptography==2.2.1
 enum34==1.1.6
 h2==3.0.1
 hpack==3.0.0
@@ -24,6 +24,7 @@ lmdb==0.93
 MarkupSafe==1.0
 mistune==0.8.3
 netaddr==0.7.19
+passlib==1.7.1
 pathtools==0.1.2
 priority==1.3.0
 psutil==5.4.3
@@ -41,7 +42,7 @@ requests==2.18.4
 sdnotify==0.3.2
 service-identity==17.0.0
 setproctitle==1.1.10
-setuptools==38.5.2
+setuptools==39.0.1
 shutilwhich==1.1.0
 six==1.11.0
 sortedcontainers==1.5.9
