--- a/docker/x86_64/Dockerfile.pypy3.old
+++ b/docker/x86_64/Dockerfile.pypy3.old
@@ -61,7 +61,7 @@ RUN crossbar version
 RUN adduser --system --group --uid 242 --home /node crossbar
 
 # initialize a Crossbar.io node
-COPY ./node/ /node/
+COPY ./_node/ /node/
 RUN chown -R crossbar:crossbar /node
 
 # make /node a volume to allow external configuration
