integrate cli test into travis

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,16 @@
 [tox]
-envlist = flake8, {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}
+envlist = flake8, cli, {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}
 
 [flake8]
 exclude = crossbar/worker/test/examples/syntaxerror.py
+
+[testenv:cli]
+skip_install = False
+changedir={toxinidir}
+commands =
+   {toxinidir}/test/test_cli.sh
+basepython = python3.6
+
 
 [testenv:flake8]
 skip_install = True
