--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
   include:
     - env: TOX_ENV=flake8
 
+    - env: TOX_ENV=cli
+
     - python: 2.7
       env: TOX_ENV=py27-unpinned,coverage-report
     - python: 2.7
