--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,23 @@
 [tox]
-envlist = flake8, cpy-cli, pypy-cli, {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}
-
-[flake8]
-exclude = crossbar/worker/test/examples/syntaxerror.py
-
-
-[testenv:cpy-cli]
-skip_install = False
-changedir={toxinidir}
-commands =
-   {toxinidir}/test/test_cli.sh
-basepython = python3.6
-
-[testenv:pypy-cli]
-skip_install = False
-changedir={toxinidir}
-commands =
-   {toxinidir}/test/test_cli.sh
-basepython = pypy3
-
+envlist = flake8, {py36,pypy3}-cli, {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}
 
 [testenv:flake8]
 skip_install = True
+exclude = crossbar/worker/test/examples/syntaxerror.py
 changedir={toxinidir}
 deps =
    flake8==3.2.0,<3.2.1
 commands =
    flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
+
+
+[testenv:cli]
+skip_install = True
+changedir={toxinidir}
+commands =
+   {toxinidir}/test/test_cli.sh
+basepython = python3.6
 
 
 [testenv:coverage-erase]
