--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,42 @@
 [tox]
-envlist = flake8, {py36,pypy3}-cli, {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}
+envlist =
+    flake8
+    {py27,py36,pypy,pypy3}-cli
+    {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}-trial
+
+
+[testenv]
+deps =
+    # use Autobahn master branch (in case we changed stuff there we depend on here)
+    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+commands =
+    # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
+    pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
+
+    # in envs with "cli", run crossbar CLI via a test shell script
+    cli: {toxinidir}/test/test_cli.sh
+
+    # in envs with "trial", install test/dev deps
+    trial: pip install -r {toxinidir}/requirements-dev.txt
+
+    # in envs with "trial", run Twisted trial (under coverage)
+    trial: coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {posargs:crossbar}
+setenv =
+    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
+    COVERAGE_FILE = {toxinidir}/.coverage
+    {py27,py36}: CB_FULLTESTS = 1
+
 
 [testenv:flake8]
 skip_install = True
+changedir = {toxinidir}
 exclude = crossbar/worker/test/examples/syntaxerror.py
-changedir={toxinidir}
 deps =
    flake8==3.2.0,<3.2.1
 commands =
    flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
 
-
-[testenv:cli]
-skip_install = True
-changedir={toxinidir}
-commands =
-   {toxinidir}/test/test_cli.sh
-basepython = python3.6
-
-
-[testenv:coverage-erase]
-skip_install = True
-changedir={toxinidir}
-deps =
-   coverage
-commands=
-   coverage erase
 
 [testenv:coverage-report]
 skip_install = True
@@ -39,29 +49,10 @@ commands=
    coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
 
 
-[testenv]
-whitelist_externals = sh
-changedir=tests
+[testenv:coverage-erase]
+skip_install = True
+changedir = {toxinidir}
 deps =
-   mock
    coverage
-   abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
-   passlib
-   argon2_cffi
-commands =
-   sh -c "env"
-   sh -c "which python"
-   sh -c "which coverage"
-   python -V
-   pip --version
-   pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
-
-   python -c "import setuptools; print('setuptools-%s' % setuptools.__version__)"
-   coverage --version
-   {envbindir}/trial --version
-
-   coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {posargs:crossbar}
-setenv =
-   COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
-   COVERAGE_FILE = {toxinidir}/.coverage
-   {py27,py36}: CB_FULLTESTS = 1
+commands=
+   coverage erase
