--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,10 @@
-tox>=2.6.0
-flake8>=2.5.1
-colorama>=0.3.3
-mock>=1.3.0
-wheel>=0.26.0
-hashin>=0.4.1
-txtorcon>=0.19.3
+# test/build
+tox
+flake8
+mock
+wheel
+hashin
+coverage
 
 # docs
 flask
