--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     flake8
-    {py27,py36,pypy,pypy3}-cli
-    {py27,py36,pypy,pypy3}-{pinned,unpinned,abtrunk}-trial
+    {py36,pypy3}-cli
+    {py36,pypy3}-{pinned,unpinned,abtrunk}-trial
 
 
 [testenv]
@@ -24,7 +24,7 @@ commands =
 setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     COVERAGE_FILE = {toxinidir}/.coverage
-    {py27,py36}: CB_FULLTESTS = 1
+    {py36,pypy3}: CB_FULLTESTS = 1
 
 
 [testenv:flake8]
@@ -32,10 +32,10 @@ skip_install = True
 changedir = {toxinidir}
 exclude = crossbar/worker/test/examples/syntaxerror.py
 deps =
-   flake8==3.2.0,<3.2.1
+   flake8
 commands =
    flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
-basepython = python2.7
+basepython = python3.6
 
 
 [testenv:coverage-report]
