--- a/.travis.yml
+++ b/.travis.yml
@@ -25,51 +25,34 @@ matrix:
   include:
     - env: TOX_ENV=flake8
 
-    - python: 2.7
-      env: TOX_ENV=py27-unpinned,coverage-report
-    - python: 2.7
-      env: TOX_ENV=py27-pinned,coverage-report
-    - python: 2.7
-      env: TOX_ENV=py27-abtrunk,coverage-report
+    - python: 3.6
+      env: TOX_ENV=py36-cli
+    - python: pypy3
+      env: TOX_ENV=pypy3-cli
 
     - python: 3.6
-      env: TOX_ENV=py36-unpinned,coverage-report
+      env: TOX_ENV=py36-unpinned-trial,coverage-report
     - python: 3.6
-      env: TOX_ENV=py36-pinned,coverage-report
+      env: TOX_ENV=py36-pinned-trial,coverage-report
     - python: 3.6
-      env: TOX_ENV=py36-abtrunk,coverage-report
-
-    - python: pypy
-      env: TOX_ENV=pypy-unpinned,coverage-report
-    - python: pypy
-      env: TOX_ENV=pypy-pinned,coverage-report
-    - python: pypy
-      env: TOX_ENV=pypy-abtrunk,coverage-report
+      env: TOX_ENV=py36-abtrunk-trial,coverage-report
 
     - python: pypy3
-      env: TOX_ENV=pypy3-unpinned,coverage-report
+      env: TOX_ENV=pypy3-unpinned-trial,coverage-report
     - python: pypy3
-      env: TOX_ENV=pypy3-pinned,coverage-report
+      env: TOX_ENV=pypy3-pinned-trial,coverage-report
     - python: pypy3
-      env: TOX_ENV=pypy3-abtrunk,coverage-report
+      env: TOX_ENV=pypy3-abtrunk-trial,coverage-report
 
+  # we allow failures when not using autobahn trunk, for cases
+  # where we depend on a new feature in autobahn here in crossbar
   allow_failures:
-      - python: 2.7
-        env: TOX_ENV=py27-unpinned,coverage-report
-      - python: 2.7
-        env: TOX_ENV=py27-pinned,coverage-report
-
       - python: 3.6
-        env: TOX_ENV=py36-unpinned,coverage-report
+        env: TOX_ENV=py36-unpinned-trial,coverage-report
       - python: 3.6
-        env: TOX_ENV=py36-pinned,coverage-report
-
-      - python: pypy
-        env: TOX_ENV=pypy-unpinned,coverage-report
-      - python: pypy
-        env: TOX_ENV=pypy-pinned,coverage-report
+        env: TOX_ENV=py36-pinned-trial,coverage-report
 
       - python: pypy3
-        env: TOX_ENV=pypy3-unpinned,coverage-report
+        env: TOX_ENV=pypy3-unpinned-trial,coverage-report
       - python: pypy3
-        env: TOX_ENV=pypy3-pinned,coverage-report
+        env: TOX_ENV=pypy3-pinned-trial,coverage-report
