run autobahn examples

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
     flake8
-    {py36,pypy3}-cli
     {py36,pypy3}-{pinned,unpinned,abtrunk}-trial
+    {py36,pypy3}-cli
+    {py36,pypy3}-examples
 
 
 [testenv]
@@ -15,6 +16,9 @@ commands =
 
     # in envs with "cli", run crossbar CLI via a test shell script
     cli: {toxinidir}/test/test_cli.sh
+
+    # in envs with "examples", run Autobahn(Python) client examples a test shell script
+    examples: {toxinidir}/test/test_ab_examples.sh
 
     # in envs with "trial", install test/dev deps
     trial: pip install -r {toxinidir}/requirements-dev.txt
