--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,11 @@ matrix:
       env: TOX_ENV=pypy3-cli
 
     - python: 3.6
+      env: TOX_ENV=py36-examples
+    - python: pypy3
+      env: TOX_ENV=pypy3-examples
+
+    - python: 3.6
       env: TOX_ENV=py36-unpinned-trial,coverage-report
     - python: 3.6
       env: TOX_ENV=py36-pinned-trial,coverage-report
