--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ envlist =
 deps =
     # use Autobahn master branch (in case we changed stuff there we depend on here)
     abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+
+    examples: colorama
 commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
