--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,26 @@
 [tox]
 envlist =
     flake8
-    {py36,pypy3}-cli
     {py36,pypy3}-{pinned,unpinned,abtrunk}-trial
+    {py36,pypy3}-cli
+    {py36,pypy3}-examples
 
 
 [testenv]
 deps =
     # use Autobahn master branch (in case we changed stuff there we depend on here)
     abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+
+    examples: colorama
 commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
     # in envs with "cli", run crossbar CLI via a test shell script
     cli: {toxinidir}/test/test_cli.sh
+
+    # in envs with "examples", run Autobahn(Python) client examples a test shell script
+    examples: {toxinidir}/test/test_ab_examples.sh
 
     # in envs with "trial", install test/dev deps
     trial: pip install -r {toxinidir}/requirements-dev.txt
