activating coverage for cli tests

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
     # in envs with "cli", run crossbar CLI via a test shell script
-    cli: {toxinidir}/test/test_cli.sh
+    cli: coverage run --rcfile={toxinidir}/.coveragerc {toxinidir}/test/test_cli.sh
 
     # in envs with "examples", run Autobahn(Python) client examples a test shell script
     examples: {toxinidir}/test/test_ab_examples.sh
