--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,14 @@ envlist =
     flake8
     {py36,pypy3}-{pinned,unpinned,abtrunk}-trial
     {py36,pypy3}-cli
+    {py36,pypy3}-clicoverage
     {py36,pypy3}-examples
 
 
 [testenv]
 deps =
+    coverage
+
     # use Autobahn master branch (in case we changed stuff there we depend on here)
     abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
 
@@ -17,7 +20,10 @@ commands =
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
     # in envs with "cli", run crossbar CLI via a test shell script
-    cli: coverage run --rcfile={toxinidir}/.coveragerc {toxinidir}/test/test_cli.sh
+    cli: {toxinidir}/test/test_cli.sh
+
+    # in envs with "cli", run crossbar CLI via a test shell script
+    clicoverage: coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ version
 
     # in envs with "examples", run Autobahn(Python) client examples a test shell script
     examples: {toxinidir}/test/test_ab_examples.sh
