auto shutdown option; new try

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,10 @@ envlist =
 
 
 [testenv]
+whitelist_externals =
+    sh
+    rm
+    coverage
 deps =
     coverage
 
@@ -23,7 +27,9 @@ commands =
     cli: {toxinidir}/test/test_cli.sh
 
     # in envs with "cli", run crossbar CLI via a test shell script
-    clicoverage: coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ version
+    clicoverage: rm -rf /tmp/test
+    clicoverage: python -m crossbar.__main__ init --personality=standalone --appdir /tmp/test
+    clicoverage: coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test --shutdownafter=2
 
     # in envs with "examples", run Autobahn(Python) client examples a test shell script
     examples: {toxinidir}/test/test_ab_examples.sh
